<resources>
    <string name="app_name">Qureco</string>
    <string-array name="nav_drawer_labels">
        <item>My Accounts</item>
        <item>Share the app</item>
        <item>About Us</item>
        <item>Rate Us</item>
        <item>Feedback</item>
        <item>Terms &amp; Conditions</item>
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Login Page -->
    <string name="input_phone">Mobile Number</string>
    <string name="input_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>

    <!-- Register Page -->
    <string name="input_name">Name</string>
    <string name="btn_register">Submit</string>
    <string name="btn_register_complete">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Edit Preference-->
    <string name="btn_edit_preference">Save</string>

    <!-- Edit Profile-->
    <string name="btn_edit_profile">Save</string>
    <!--  Page -->

    <string name="review">Review</string>
    <string name="loyalty">Loyalty</string>
    <string name="feedback">Feedback</string>

    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps1">Map</string>


    <string name="option1">LOYALTY</string>
    <string name="option2">DEALS &amp; OFFERS</string>
    <string name="option3">REVIEW</string>
    <string name="option4">LIFE SAVERS</string>


    <declare-styleable name="customfont">
        <attr name="android:fontFamily" />
        <attr name="android:textStyle" />
    </declare-styleable>
    <string name="title_activity_maps_view_page">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
</resources>
