<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sriyaan.qureco.Login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="5dp"
                card_view:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/input_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_phone"
                            android:textColor="@color/colorAccent"
                            android:textSize="15dp"
                            android:inputType="phone"
                            android:textColorHint="@color/black" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_password"
                            android:inputType="textPassword"
                            android:textColor="@color/colorAccent"
                            android:textSize="15dp"
                            android:textColorHint="@color/black" />

                    </android.support.design.widget.TextInputLayout>
                    <RelativeLayout
                        android:id="@+id/rel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="New User? Please register."
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="10dp"
                            android:textSize="13dp" />

                        <TextView
                            android:id="@+id/tvForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/forgot_password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13dp"
                            android:layout_gravity="end"
                            android:visibility="gone" />
                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_login" />
</RelativeLayout>
