<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/btnRegister"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Skip"
                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_name"
                            android:textColor="@color/black" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/Mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Mobile Number"
                            android:textColor="@color/black" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            />
                        <RadioButton
                            android:id="@+id/female"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="DOB" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/promocode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Referral Code"
                            android:textColor="@color/black" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_register" />
</RelativeLayout>
