<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sriyaan.qureco.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:layout_above="@+id/btnRegister"
        android:orientation="vertical">



        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Skip"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:background="@drawable/circular"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Name"
                            android:textSize="15dp"
                            android:typeface="serif"
                            android:textColor="@color/light_black"
                            android:singleLine="true"
                            android:imeOptions="actionNext" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/Mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Mobile Number"
                            android:textSize="15dp"
                            android:typeface="serif"
                            android:textColor="@color/light_black"
                            android:singleLine="true"
                            android:inputType="phone"
                            android:digits="0123456789"
                            android:imeOptions="actionNext" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:typeface="serif"
                            android:textSize="12dp"
                            />
                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:typeface="serif"
                            android:textSize="12dp"
                            />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:hint="Date of Birth"
                            android:typeface="serif"
                            android:textColor="@color/light_black"
                            android:singleLine="true"
                            android:imeOptions="actionNext" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/light_black">

                        <EditText
                            android:id="@+id/promocode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Referral code"
                            android:textSize="15dp"
                            android:typeface="serif"
                            android:textColor="@color/light_black"
                            android:singleLine="true"
                            android:imeOptions="actionDone" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_register" />
</RelativeLayout>
